# Awesome-Agentic-Business-Workflows

./: .gitignore  README.md  README_EN.md  config.example.yaml  main.py  pyproject.toml
.github/workflows/: daily_update.yml
hotspot-sniffer/: main.py  pyproject.toml
