[project]
name = "hotspot-sniffer"
version = "0.1.0"
description = "A production-grade AI trend sniffer powered by GitHub Models API."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "azure-ai-inference>=1.0.0b1",
    "azure-core>=1.30.0",
]
